--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.5"
+    "nuxt": "^2.14.5",
+    "vue-audio": "0.0.12"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.11.2"
